Fix the overlapping of words

--- a/styles.css
+++ b/styles.css
@@ -44,8 +44,8 @@ border-radius: 1em;
     padding: 1em;
     margin: 1em;
     border-radius: 1em;
+    }
     
-}
 .footer{
     background-color: rgb(94, 212, 216);
     border: 2px solid;
@@ -56,8 +56,8 @@ border-radius: 1em;
     .special{
         background-color: yellow;
         border: 1px;
-        padding: 0.5em;
-        margin: 1em;
+        padding: 0em;
+        margin: 0em;
     }
 @media (min-width: 760px) {
     body {background-color: burlywood;}
